:nut_and_bolt: headings, content

--- a/app/views/6-location-all3.hbs
+++ b/app/views/6-location-all3.hbs
@@ -13,7 +13,7 @@
 
     <div class="section">
         <div class="form-line">
-            <label for="loc1" class="form-label"><h3>This can be a town, city or postcode.</h3></label>
+            <label for="loc1" class="form-label"><h3>Enter the postcode you would get the kit delivered to.</h3></label>
             <input type="text" placeholder="" name="loc1" id="loc1" class="form-textbox" aria-describedby="hintId">
         </div>
     </div>
