--- a/app/views/6-location-online.hbs
+++ b/app/views/6-location-online.hbs
@@ -6,7 +6,7 @@
 
     <div class="section">
         <div class="form-line">
-            <label for="loc" class="form-label"><h3>This can be a town, city or postcode.</h3></label>
+            <label for="loc" class="form-label"><h3>Enter a postcode.</h3></label>
             <input type="text" placeholder="" name="loc" id="loc" class="form-textbox" aria-describedby="hintId">
         </div>
     </div>
