--- a/app/views/partials/online-providers.hbs
+++ b/app/views/partials/online-providers.hbs
@@ -1,4 +1,4 @@
-{{#if (lookup 'online-providers' this) }}
+{{#if this}}
   <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">Where to order a self-test kit online</h2>
 {{/if}}
 
