--- a/app/views/partials/pharmacies.hbs
+++ b/app/views/partials/pharmacies.hbs
@@ -1,4 +1,4 @@
-{{#if (lookup 'pharmacies' this) }}
+{{#if this}}
   <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">Pharmacies where you can buy a self-test kit</h2>
 {{/if}}
 
