--- a/app/views/partials/sexual-health-providers.hbs
+++ b/app/views/partials/sexual-health-providers.hbs
@@ -1,4 +1,4 @@
-{{#if (lookup 'sexual-health-providers' this) }}
+{{#if this}}
  <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">Places you can see someone</h2>
 {{/if}}
 
