--- a/app/views/7-results.hbs
+++ b/app/views/7-results.hbs
@@ -1,5 +1,5 @@
 <h2>{{ locationHeading }}</h2>
 <br />
-{{#each partials}}
-    {{> (partial . this)}}
-{{/each}}
+{{#partials}}
+    {{> (lookup ../partials @index) (lookup ../partialHeading @index) }}
+{{/partials}}
