--- a/app/views/partials/online-providers.hbs
+++ b/app/views/partials/online-providers.hbs
@@ -2,6 +2,6 @@
   <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">Where to order a self-test kit online</h2>
 {{/if}}
 
-<a href="https://www.ruclear.co.uk/greater_manchester/get_tested/" target="_blank"><span style="font-size: 22px; font-weight: 600; ">RU Clear</span></a><br />
-Covers: Greater Manchester Authority
-<br /><br />
+<!--<a href="https://www.ruclear.co.uk/greater_manchester/get_tested/" target="_blank"><span style="font-size: 22px; font-weight: 600; ">RU Clear</span></a><br />-->
+<!--Covers: Greater Manchester Authority-->
+<!--<br /><br />-->
