--- a/app/views/partials/pharmacies.hbs
+++ b/app/views/partials/pharmacies.hbs
@@ -2,13 +2,13 @@
   <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">Pharmacies where you can buy a self-test kit</h2>
 {{/if}}
 
-<a href="https://www.nhs.uk/Services/pharmacies/Overview/DefaultView.aspx?id=5641"><span style="font-size: 22px; font-weight: 600; ">Boots Pharmacy</span></a><br />
-<span style="font-size: 16px;">0.1 miles away</span><br />
-Manchester Arndale, 32 Market St, Manchester M1 1PL<br />
-Telephone: 0161 832 6533
-<br /><br />
-<a href="https://www.nhs.uk/Services/pharmacies/Overview/DefaultView.aspx?id=4854"><span style="font-size: 22px; font-weight: 600; ">Boots Pharmacy</span></a><br />
-<span style="font-size: 16px;">0.3 miles away</span><br />
-11-13 Piccadilly, Manchester M1 1LY<br />
-Telephone: 0161 832 6533
-<br /><br />
+<!--<a href="https://www.nhs.uk/Services/pharmacies/Overview/DefaultView.aspx?id=5641"><span style="font-size: 22px; font-weight: 600; ">Boots Pharmacy</span></a><br />-->
+<!--<span style="font-size: 16px;">0.1 miles away</span><br />-->
+<!--Manchester Arndale, 32 Market St, Manchester M1 1PL<br />-->
+<!--Telephone: 0161 832 6533-->
+<!--<br /><br />-->
+<!--<a href="https://www.nhs.uk/Services/pharmacies/Overview/DefaultView.aspx?id=4854"><span style="font-size: 22px; font-weight: 600; ">Boots Pharmacy</span></a><br />-->
+<!--<span style="font-size: 16px;">0.3 miles away</span><br />-->
+<!--11-13 Piccadilly, Manchester M1 1LY<br />-->
+<!--Telephone: 0161 832 6533-->
+<!--<br /><br />-->
