--- a/app/views/4-choices-u25.hbs
+++ b/app/views/4-choices-u25.hbs
@@ -3,12 +3,12 @@
 {{> components/check-boxes-3
         checkbox-1="Pick up a free self-test kit from a pharmacy
                     <p class='extra-info'>Get a free kit to take your own samples and send them by post to be tested. Your results are private. Treatment is free if you need it.</p>"
-        checkbox-1-value="choose-pharmacy"
+        checkbox-1-value="pharmacy"
         checkbox-2="Order a free self-test kit online
                     <p class='extra-info'>Get a free kit sent to you by post. The packaging is discreet. You'll take your own samples and send them back to be tested. Your results are private. Treatment is free if you need it.</p>"
-        checkbox-2-value="choose-online"
+        checkbox-2-value="online"
         checkbox-3="See a sexual health professional
                     <p class='extra-info'>Testing is free, and treatment is free if you need it. They won't share your results with your GP unless you ask them to.</p>"
-        checkbox-3-value="choose-location"
+        checkbox-3-value="location"
         checkbox-name="multiChoose"
 }}
