:disappointed: temp fix online result

--- a/app/views/partials/online-providers.hbs
+++ b/app/views/partials/online-providers.hbs
@@ -3,9 +3,5 @@
 {{/if}}
 
 {{#each this.onlineProviders}}
-    {{> service service=this}}
+    {{> online-service service=this}}
 {{/each}}
-
-<!--<a href="https://www.ruclear.co.uk/greater_manchester/get_tested/" target="_blank"><span style="font-size: 22px; font-weight: 600; ">RU Clear</span></a><br />-->
-<!--Covers: Greater Manchester Authority-->
-<!--<br /><br />-->
