--- a/app/views/partials/service.hbs
+++ b/app/views/partials/service.hbs
@@ -1,4 +1,4 @@
-<a href="{{ service.url }}"><span style="font-size: 22px; font-weight: 600; ">{{ service.name }}</span></a><br />
+<a href="{{ service.choicesUrl }}"><span style="font-size: 22px; font-weight: 600; ">{{ service.name }}</span></a><br />
 <span style="font-size: 16px;">{{ service.distance }} miles away</span><br />
 {{ service.address }}<br />
 Telephone: {{ service.tel }}
