--- a/app/views/4-choices-u25.hbs
+++ b/app/views/4-choices-u25.hbs
@@ -1,4 +1,5 @@
-<h2>What would you like to do?</h2>
+<h2>How would you like to get tested?</h2>
+<p>You can choose more than.</p>
 
 {{> components/check-boxes-3
         checkbox-1="Pick up a free self-test kit from a pharmacy
