--- a/app/views/5-preferred-times.hbs
+++ b/app/views/5-preferred-times.hbs
@@ -1,6 +1,6 @@
-<h2>What times work best for you?</h2>
+<h2>{{ locationTimeHeading }}</h2>
 
-<p>We'll show you places that are open at the times you choose.</p>
+<p>{{ locationTimePara }}</p>
 
 {{> components/check-boxes-5
         checkbox-1="Any time Monday to Friday"
