--- a/app/views/1-intro.hbs
+++ b/app/views/1-intro.hbs
@@ -1,43 +1,39 @@
-<h2>Get tested for Chlamydia</h2>
+<h2>Find a chlamydia test</h2>
 
-<p>You should get tested if you have any <a href="condition#symptoms">symptoms of chlamydia</a> or you're <a href="condition#people-at-risk">at risk</a>.</p>
-
-<div class="callout callout--attention">
-    <p>The only way to know if you have <a href="https://www.nhs.uk/conditions/chlamydia/symptoms/">chlamydia</a> is to get tested. You might have no symptoms.</p>
-</div>
-
-<p>You might be told to get tested 2 weeks after unprotected sex. This is because it can take 2 weeks for chlamydia to show up in a test.
-</p>
-
-<h2>How you'll be tested</h2>
-
-<p>Samples will be taken from the areas that might be infected using one or more of the following methods:</p>
-
-<ul>
-    <li>swab inside the vagina, bottom or mouth using a cotton bud</li>
-    <li>pee into a container</li>
-</ul>
-
-<p>Your samples will be sent to a lab and tested for chlamydia. You'll get your results by phone or text message.</p>
-
-<p>If you see a health professional they'll also ask questions about your sexual activity and symptoms. This will help them decide what samples to take.</p>
-
-<h2>Where you can get tested</h2>
-
-<p>The best ways to get tested for chlamydia are to:</p>
+<p>The best ways to get tested for <a href="https://nhsuk-primary-care.herokuapp.com/design_sprint_4/condition-main">chlamydia</a> are to:</p>
 
 <ul>
     <li>see a sexual health professional</li>
-    <li>get a self-test kit from a pharmacy</li>
-    <li>order a self-test kit online</li>
+    <li>get a test kit from pharmacies that have them</li>
+    <li>order a test kit online</li>
 </ul>
 
+<!--<div class="callout callout--info">-->
+    <p>We can help you find a test that's right for you. We'll ask you a few questions. It will take about 5 minutes. We won't store your data.</p>
+<!--</div>-->
 
-<div class="callout callout--info">
-    <p>We can help you find a test that's right for you.</p>
-    <p>We'll ask you a few questions. It will take about 5 minutes.</p>
-    <p>We won't store your data.</p>
-</div>
+<p><a href="/2-check-for-symptoms"><button class="button">Start</button></a></p>
 
-<p><a href="/2-check-for-symptoms"><button class="button">Find a test</button></a></p>
+<!--<div class="callout callout--attention">-->
+    <!--<p>The only way to know if you have <a href="https://www.nhs.uk/conditions/chlamydia/symptoms/">chlamydia</a> is to get tested. You might have no symptoms.</p>-->
+<!--</div>-->
+
+
+<h3>What happens during the test</h3>
+
+<p>You or a sexual health professional will collect samples from the areas that might be infected. This can be done by:</p>
+
+<ul>
+    <li>wiping a cotton bud inside the vagina, bottom or mouth</li>
+    <li>peeing into a container</li>
+</ul>
+
+<p>Your samples will be sent to a lab and tested for chlamydia. You'll usually get your results by phone or text message within 2 weeks.</p>
+
+<p>If you see a health professional they'll also ask questions about your sexual activity and symptoms. This will help them decide what samples to take.</p>
+
+
+
+
+
 
