--- a/app/views/2-check-for-symptoms.hbs
+++ b/app/views/2-check-for-symptoms.hbs
@@ -1,15 +1,15 @@
-<h2>Do you have any of these symptoms?</h2>
+<h2>Do you have any of the following symptoms?</h2>
 
 <ul>
     <li>discomfort or pain when urinating (peeing)</li>
     <li>discharge from your bottom</li>
     <li>vaginal discharge that is not usual for you</li>
-    <li>bleeding between periods (even if you use contraception)</li>
-    <li>bleeding during or after sex (in women)</li>
-    <li>pain during sex (in women)</li>
-    <li>pelvic pain (in women)</li>
-    <li>discharge from your penis</li>
-    <li>pain in your testicles</li>
+    <li>bleeding between periods</li>
+    <li>vaginal bleeding during or after sex</li>
+    <li>vaginal pain during sex</li>
+    <li>pelvic pain</li>
+    <li>discharge from the penis</li>
+    <li>pain in the testicles</li>
 </ul>
 
 {{> components/radio-button-2
