--- a/app/views/4-choices.hbs
+++ b/app/views/4-choices.hbs
@@ -1,4 +1,5 @@
-<h2>What would you like to do?</h2>
+<h2>How would you like to get tested?</h2>
+<p>You can choose more than one.</p>
 
 {{> components/check-boxes-3
         checkbox-1="See a sexual health professional
