:bird: small tweaks

--- a/app/views/1-intro.hbs
+++ b/app/views/1-intro.hbs
@@ -21,7 +21,7 @@
 
 <h3>What happens during the test</h3>
 
-<p>You or a sexual health professional will collect samples from the areas that might be infected. This can be done by:</p>
+<p>You or a sexual health professional will take samples from the areas that might be infected. This can be done by:</p>
 
 <ul>
     <li>wiping a cotton bud inside the vagina, bottom or mouth</li>
