--- a/app/views/2-check-for-symptoms.hbs
+++ b/app/views/2-check-for-symptoms.hbs
@@ -13,7 +13,7 @@
 </ul>
 
 {{> components/radio-button-2
-        radio-1="Yes, I have some of these symptoms"
+        radio-1="Yes, I have one or more of these symptoms"
         radio-1-value="yes"
         radio-2="No, I don't think I have any of these symptoms"
         radio-2-value="no"
