--- a/app/views/4-choices.hbs
+++ b/app/views/4-choices.hbs
@@ -1,4 +1,4 @@
-<h2>How would you like to get tested?</h2>
+<h2>How do you want to get tested?</h2>
 <p>You can choose more than one.</p>
 
 {{> components/check-boxes-3
