:runner: more data Wrangling

--- a/app/views/1-intro.hbs
+++ b/app/views/1-intro.hbs
@@ -4,7 +4,7 @@
 
 <ul>
     <li>see a sexual health professional</li>
-    <li>get a test kit from pharmacies that have them</li>
+    <li>get a test kit from pharmacies and other facilities that have them</li>
     <li>order a test kit online</li>
 </ul>
 
