--- a/app/views/4-choices-u25.hbs
+++ b/app/views/4-choices-u25.hbs
@@ -2,7 +2,7 @@
 <p>You can choose more than one.</p>
 
 {{> components/check-boxes-3
-        checkbox-1="Pick up a free self-test kit from a pharmacy
+        checkbox-1="Pick up a free self-test kit from a pharmacy or another facility
                     <p class='extra-info'>Get a free kit to take your own samples and send them by post to be tested. Your results are private. Treatment is free if you need it.</p>"
         checkbox-1-value="pharmacy"
         checkbox-2="Order a free self-test kit online
