--- a/app/views/partials/pharmacies.hbs
+++ b/app/views/partials/pharmacies.hbs
@@ -1,5 +1,5 @@
-{{#if this.partialHeading}}
-  <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">Pharmacies where you can buy a self-test kit</h2>
+{{#if this.partialHeadingExists}}
+  <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">{{this.partialHeading}}</h2>
 {{/if}}
 
 {{#each this.pharmacies}}
