--- a/app/views/partials/sexual-health-providers.hbs
+++ b/app/views/partials/sexual-health-providers.hbs
@@ -1,5 +1,5 @@
-{{#if this.partialHeading}}
- <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">Places you can see someone</h2>
+{{#if this.partialHeadingExists}}
+ <h2 style="font-size: 26px; line-height: 30px; margin-bottom: 32px;">{{this.partialHeading}}</h2>
 {{/if}}
 
 {{#each this.SHProviders}}
