--- a/app/views/4-choices.hbs
+++ b/app/views/4-choices.hbs
@@ -1,14 +1,14 @@
-<h2>How do you want to get tested?</h2>
+<h2>How do you want to get a test?</h2>
 <p>You can choose more than one.</p>
 
 {{> components/check-boxes-3
         checkbox-1="See a sexual health professional
                     <p class='extra-info'>Tests are free, and treatment is free if you need it. They won't share your results with your GP unless you ask them to.</p>"
         checkbox-1-value="location"
-        checkbox-2="Buy a self-test kit from a pharmacy
+        checkbox-2="Buy a test kit from a pharmacy
                     <p class='extra-info'>Buy a kit to take your own samples and send them by post to be tested. Your results are private. You might have to pay a prescription charge if you need treatment.</p>"
         checkbox-2-value="pharmacy"
-        checkbox-3="Buy a self-test kit online
+        checkbox-3="Buy a test kit online
                     <p class='extra-info'>Order a kit to be sent to you by post. The packaging is discreet. You'll take your own samples and send them back to be tested. Your results are private. You might have to pay a prescription charge if you need treatment.</p>"
         checkbox-3-value="online"
         checkbox-name="multiChoose"
