--- a/app/views/partials/service.hbs
+++ b/app/views/partials/service.hbs
@@ -1,5 +1,5 @@
-<a href="{{ service.choicesUrl }}"><span style="font-size: 22px; font-weight: 600; ">{{ service.name }}</span></a><br />
-<span style="font-size: 16px;">{{ service.distance }} miles away</span><br />
+<a href="{{ service.choicesUrl }}"><span style="font-size: 22px; font-weight: 600; ">{{ service.name }}</span></a> <a href="{{ service.mapUrl }}">(View on map)</a><br />
+<span style="font-size:14px;">{{ service.distance }} miles away</span><br />
 {{ service.address }}<br />
-<!--Telephone: {{ service.tel }}-->
+Telephone: <a href="tel:{{ service.tel }}"></a>{{ service.tel }}
 <br /><br />
