:scissors: add template snippets

--- a/app/views/partials/service.hbs
+++ b/app/views/partials/service.hbs
@@ -3,3 +3,7 @@
 {{ service.address }}<br />
 Telephone: <a href="tel:{{ service.tel }}"></a>{{ service.tel }}
 <br /><br />
+{{> (partial service.snip) }}
+{{> (partial service.openingTimes) }}
+
+<br /><br />
