--- a/app/views/partials/snip-pharmacy.hbs
+++ b/app/views/partials/snip-pharmacy.hbs
@@ -1,1 +1,3 @@
+Pharmacy
+
 <div class="callout callout--muted" style="margin-top: 8px; margin-bottom: 8px;">This pharmacy has a booth where you can talk to a qualified pharmacist in private. Here, you'll be able to buy a chlamydia test kit. You'll have to send your samples by post to be tested.</div>
