:running: more snippets, preferredtimes passing through

--- a/app/views/5-preferred-times.hbs
+++ b/app/views/5-preferred-times.hbs
@@ -4,14 +4,14 @@
 
 {{> components/check-boxes-5
         checkbox-1="Any time Monday to Friday"
-        checkbox-1-value="weekdays"
+        checkbox-1-value="wdays"
         checkbox-2="Saturday or Sunday"
-        checkbox-2-value="weekend"
+        checkbox-2-value="wend"
         checkbox-3="Early morning and late afternoon Monday to Friday"
-        checkbox-3-value="aroundworkweekdays"
+        checkbox-3-value="outworkwdays"
         checkbox-4="Between midday and 2pm Monday to Friday"
-        checkbox-4-value="lunchweekdays"
+        checkbox-4-value="lunchwdays"
         checkbox-5="After 6pm Monday to Friday"
-        checkbox-5-value="oohweekdays"
-        checkbox-name="preferredTimes"
+        checkbox-5-value="oohwdays"
+        checkbox-name="prefTimes"
 }}
