--- a/app/views/partials/opening-times-oohwdays.hbs
+++ b/app/views/partials/opening-times-oohwdays.hbs
@@ -1,4 +1,4 @@
-<details role="group" style="margin-top: 8px;">
+<details role="group">
     <summary class="more-info" role="button" aria-controls="details-content-1" tabindex="0" aria-expanded="false">
         <span>View opening times</span>
     </summary>
@@ -8,23 +8,23 @@
             <tbody>
             <tr>
                 <td class="left60">Monday</td>
-                <td class="right">8am to 6pm</td>
+                <td class="right">5pm to 10pm</td>
             </tr>
             <tr>
                 <td class="left60">Tuesday</td>
-                <td class="right40">8am to 8.30pm</td>
+                <td class="right40">5pm to 10pm</td>
             </tr>
             <tr>
                 <td class="left60">Wednesday</td>
-                <td class="right">8am to 6pm</td>
+                <td class="right">5pm to 10pm</td>
             </tr>
             <tr>
                 <td class="left60">Thursday</td>
-                <td class="right">8am to 6pm</td>
+                <td class="right">5pm to 10pm</td>
             </tr>
             <tr>
                 <td class="left60">Friday</td>
-                <td class="right">8am to 5pm</td>
+                <td class="right">5pm to 10pm</td>
             </tr>
             <tr>
                 <td class="left60">Saturday</td>
