--- a/app/views/partials/opening-times-outworkwdays.hbs
+++ b/app/views/partials/opening-times-outworkwdays.hbs
@@ -1,4 +1,4 @@
-<details role="group" style="margin-top: 8px;">
+<details role="group">
     <summary class="more-info" role="button" aria-controls="details-content-1" tabindex="0" aria-expanded="false">
         <span>View opening times</span>
     </summary>
@@ -8,23 +8,23 @@
             <tbody>
             <tr>
                 <td class="left60">Monday</td>
-                <td class="right">11am to 2pm</td>
+                <td class="right">6am to 1pm</td>
             </tr>
             <tr>
                 <td class="left60">Tuesday</td>
-                <td class="right40">11am to 2pm</td>
+                <td class="right40">6am to 1pm</td>
             </tr>
             <tr>
                 <td class="left60">Wednesday</td>
-                <td class="right">11am to 3pm</td>
+                <td class="right">6am to 1pm</td>
             </tr>
             <tr>
                 <td class="left60">Thursday</td>
-                <td class="right">11am to 3pm</td>
+                <td class="right">6am to 1pm</td>
             </tr>
             <tr>
                 <td class="left60">Friday</td>
-                <td class="right">11am to 3pm</td>
+                <td class="right">6am to 1pm</td>
             </tr>
             <tr>
                 <td class="left60">Saturday</td>
