--- a/app/views/6-location-online.hbs
+++ b/app/views/6-location-online.hbs
@@ -1,4 +1,4 @@
-<h2>Where do you want the self-test kit delivered to?</h2>
+<h2>Where do you want the test kit delivered to?</h2>
 
 <p>We'll show you the website where you can order your kit.</p>
 
