--- a/app/views/partials/online-service.hbs
+++ b/app/views/partials/online-service.hbs
@@ -1,3 +1,3 @@
-<a href="{{ service.url }}"><span style="font-size: 22px; font-weight: 600; ">{{ service.name }}</span></a><br />
+<a href="{{ service.url }}"><span>{{ service.name }}</span></a><br />
 Covers: Leeds Local Authority
 <br /><br />
