--- a/app/views/partials/opening-times-all.hbs
+++ b/app/views/partials/opening-times-all.hbs
@@ -1,4 +1,4 @@
-<details role="group" style="margin-top: 8px;">
+<details role="group">
     <summary class="more-info" role="button" aria-controls="details-content-1" tabindex="0" aria-expanded="false">
         <span>View opening times</span>
     </summary>
