--- a/app/views/partials/snip-location-generic.hbs
+++ b/app/views/partials/snip-location-generic.hbs
@@ -1,3 +1,1 @@
-Location generic
-
-<div class="callout callout--muted" style="margin-top: 8px; margin-bottom: 8px;">You do not have to make an appointment. You can walk in. You may have to wait several hours before you are seen by a specialist.</div>
+<div class="callout callout--muted">Location generic: You do not have to make an appointment. You can walk in. You may have to wait several hours before you are seen by a specialist.</div>
