:scissors: actual snippets in

--- a/app/views/partials/online-providers.hbs
+++ b/app/views/partials/online-providers.hbs
@@ -3,5 +3,5 @@
 {{/if}}
 
 {{#each this.onlineProviders}}
-    {{> online-service service=this}}
+    {{> online-service service=this pickup=false location=false}}
 {{/each}}
