--- a/app/views/partials/snip-cash-u25.hbs
+++ b/app/views/partials/snip-cash-u25.hbs
@@ -1,7 +1,13 @@
 {{#if pickup}}
-    <div class="callout callout--muted">CASH pickup u25: You do not have to make an appointment but need to follow the timings explained. You can walk in. You may have to wait to be seen.</div>
+    <div class="callout callout--muted">
+        Pick up a free chlamydia test kit from this drop-in health service. You'll have to take your own samples and
+        send them by Freepost to be tested. You'll usually get the results within 2 weeks.
+    </div>
 {{/if}}
 
 {{#if location}}
-    <div class="callout callout--muted">CASH location u25: You do not have to make an appointment but need to follow the timings explained. You can walk in. You may have to wait to be seen.</div>
+    <div class="callout callout--muted">
+        Get a free chlamydia test at this drop-in service. You can't make an appointment. You may have to wait a few
+        hours before you can see someone. You'll usually get your results within 2 weeks.
+    </div>
 {{/if}}
