--- a/app/views/partials/snip-location-cash.hbs
+++ b/app/views/partials/snip-location-cash.hbs
@@ -1,1 +1,4 @@
-<div class="callout callout--muted">Location CASH: You do not have to make an appointment but need to follow the timings explained. You can walk in. You may have to wait to be seen.</div>
+<div class="callout callout--muted">
+    Get a free chlamydia test at this drop-in service. You can't make an appointment. You may have to wait a few hours
+    before you can see someone. You'll usually get your results within 2 weeks.
+</div>
