--- a/app/views/partials/snip-location-generic.hbs
+++ b/app/views/partials/snip-location-generic.hbs
@@ -1,1 +1,4 @@
-<div class="callout callout--muted">Location generic: You do not have to make an appointment. You can walk in. You may have to wait several hours before you are seen by a specialist.</div>
+<div class="callout callout--muted">
+    Call to book a free chlamydia test at this health service. You can drop in but you may have to wait a few hours
+    before you can see someone. Call to find out their drop-in times. You'll usually get your results within 2 weeks.
+</div>
