--- a/app/views/partials/snip-pickup-3in1-u25.hbs
+++ b/app/views/partials/snip-pickup-3in1-u25.hbs
@@ -1,1 +1,4 @@
-<div class="callout callout--muted">Pick up 3 in 1 u25: You can walk in and pick up a free chlamydia test.</div>
+<div class="callout callout--muted">
+    Pick up a free chlamydia test kit from this drop-in health service. You'll have to take your own samples and
+    send them by Freepost to be tested. You'll usually get the results within 2 weeks.
+</div>
