--- a/app/views/partials/snip-pickup-dropin-u25.hbs
+++ b/app/views/partials/snip-pickup-dropin-u25.hbs
@@ -1,1 +1,4 @@
-<div class="callout callout--muted">Pick up Drop in u25: You do not have to make an appointment but need to follow the timings explained. You can walk in. You may have to wait to be seen.</div>
+<div class="callout callout--muted">
+    Pick up a free chlamydia test kit from this drop-in health service. You'll have to take your own samples and send
+    them by Freepost to be tested. You'll usually get the results within 2 weeks.
+</div>
