--- a/app/views/partials/snip-pickup-pharmacy.hbs
+++ b/app/views/partials/snip-pickup-pharmacy.hbs
@@ -1,1 +1,4 @@
-<div class="callout callout--muted">Location Pharmacy: This pharmacy has a booth where you can talk to a qualified pharmacist in private. Here, you'll be able to buy a chlamydia test kit. You'll have to send your samples by post to be tested.</div>
+<div class="callout callout--muted">
+    Buy a chlamydia test kit from this pharmacy. You'll have to take your own samples and send them by Freepost to be
+    tested. You'll usually get the results within 2 weeks.
+</div>
