:memo: small content changes

--- a/app/views/1-intro.hbs
+++ b/app/views/1-intro.hbs
@@ -4,7 +4,7 @@
 
 <ul>
     <li>see a sexual health professional</li>
-    <li>pick up a test kit</li>
+    <li>use a chlamydia test kit</li>
     <li>order a test kit online</li>
 </ul>
 
